fixes url and adds horizontal scroll bar

--- a/src/client/scss/custom.scss
+++ b/src/client/scss/custom.scss
@@ -1,3 +1,23 @@
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
 div.scroll-menu {
   overflow-x: scroll;
   white-space: nowrap;
@@ -18,7 +38,7 @@ div.scroll-menu .scroll-menu-item {
 
 .eq-col-container {
   display: flex;
-  height: 365px;
+  height: 385px;
 }
 
 .eq-col {
